--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -24,43 +24,43 @@ runs:
           const { projectPrefix } = process.env
           const projectField = 'Status'
           const projectFieldValue = 'Done'
-          const githubIssueId = context.payload.issue.node_id;
-          const githubIssueNode = await github.graphql(`
-            query issue($issueId: ID! $projectField: String!) {
-              node(id: $issueId) {
-                ... on Issue {
-                  id
-                  state
-                  title
-                  milestone {
-                    id
-                    title
-                  }
-                  projectItems(first:10) {
-                    nodes {
-                      id
-                      project {
-                        id                    
-                        url
-                        title
-                      }
-                      fieldValueByName(name: $projectField) {
-                        ... on ProjectV2ItemFieldTextValue {
-                          text
-                        }
-                      }                      
-                    }
-                  }                                  
-                }
-              }
-            }
-            `,
-            { issueId: githubIssueId, projectField: projectField }
-          )
-          if (githubIssueNode === undefined) {
-            core.info(`Unable to find an issue with ID: ${githubIssueId}`)
-            return
-          }
+          const githubIssueId = context.payload.issue.node_id
+          # const githubIssueNode = await github.graphql(`
+          #   query issue($issueId: ID! $projectField: String!) {
+          #     node(id: $issueId) {
+          #       ... on Issue {
+          #         id
+          #         state
+          #         title
+          #         milestone {
+          #           id
+          #           title
+          #         }
+          #         projectItems(first:10) {
+          #           nodes {
+          #             id
+          #             project {
+          #               id                    
+          #               url
+          #               title
+          #             }
+          #             fieldValueByName(name: $projectField) {
+          #               ... on ProjectV2ItemFieldTextValue {
+          #                 text
+          #               }
+          #             }                      
+          #           }
+          #         }                                  
+          #       }
+          #     }
+          #   }
+          #   `,
+          #   { issueId: githubIssueId, projectField: projectField }
+          # )
+          # if (githubIssueNode === undefined) {
+          #   core.info(`Unable to find an issue with ID: ${githubIssueId}`)
+          #   return
+          # }
 
           # const githubIssue = githubIssueNode.node
           # core.info(`Issue with ID: ${githubIssueId} has a status of: ${githubIssue.state}`)
