--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -45,8 +45,8 @@ runs:
                         title
                       }
                       fieldValueByName(name: $projectField) {
-                        ... on ProjectV2ItemFieldTextValue {
-                          text
+                        ... on ProjectV2ItemFieldSingleSelectValue {
+                          name
                         }
                       }                      
                     }
