--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -150,7 +150,7 @@ runs:
             // Only posting the comment if there were no previous similar comment in the issue.
             const previousComment = await findPreviousComment(githubIssue.id, errorCode)
 
-            core.info(JSON.stringify(previousComment))
+            core.info(`Previous comment: ${JSON.stringify(previousComment)}`)
             if (previousComment === undefined) {
               await github.graphql(`
                 mutation ($issueId: ID! $body: String) {
@@ -162,11 +162,10 @@ runs:
                   }
                 }
                 `,
-                { issueId: issueId, body: commentMsg }
+                { issueId: githubIssue.id, body: commentMsg }
               )
-              core.info(`Added a comment with error code: ${errorCode} in issue with ID: ${issueId}`)
+              core.info(`Added a comment with error code: ${errorCode} in issue with ID: ${githubIssue.id}`)
             } else {
-              core.info(`Found a previous comment with error code: ${errorCode} in issue with ID: ${issueId}`)
-              core.info(JSON.stringify(previousComment))
+              core.info(`Found a previous comment with error code: ${errorCode} in issue with ID: ${githubIssue.id}`)
             }
           }
