--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -86,94 +86,98 @@ runs:
 
           core.info(`Issue contains a project item whose project starts with: ${projectPrefix}`)
           console.log(JSON.stringify(projectItem))
+
           if (projectItem.fieldValueByName.name === projectFieldValue) {
             core.info(`Issue with ID: ${githubIssueId} is closed and has a ${projectField} of ${projectFieldValue}, no action needed`)
             return
-          } else if (projectItem.fieldValueByName.text === null) {
+          } 
+          
+          if (projectItem.fieldValueByName.text === null) {
             core.warning(`Issue with ID: ${githubIssueId} value is null for field ${projectField}, the action may be misconfigured`)
             return
-          } else {
-            core.info(`Issue with ID: ${githubIssueId} is closed but should have a ${projectField} of ${projectFieldValue}, the issue will be Re-opened`)
-            await github.graphql(`
-                mutation ($issueId: ID!) {
-                  reopenIssue(input: {
-                    issueId: $issueId
-                  }) {
-                    issue {
-                      id
-                    }
-                  }
-                }
-                `,
-                { issueId: githubIssue.id }
-              )
-            core.info(`Issue ID: ${githubIssue.id} was Re-Opened`)
+          } 
 
-            // Code from: https://github.com/marocchino/sticky-pull-request-comment/blob/daa4a82a0a3f6c162c02b83fa44b3ab83946f7cb/src/comment.ts#L26
-            const findPreviousComment = async (issueId, searchCode) => {
-              let after = null
-              let hasNextPage = true
-              while (hasNextPage) {
-                core.info(`Paginating through comments in issue: ${issueId} after: ${after}`)
-                const githubIssueNodeComments = await github.graphql(`
-                  query issue($issueId: ID! $after: String) {
-                    node(id: $issueId) {
-                      ... on Issue {
-                        id
-                        comments(first: 100 after: $after) {
-                          nodes {
-                            id
-                            author {
-                              login
-                            }
-                            isMinimized
-                            body
-                          }
-                          pageInfo {
-                            endCursor
-                            hasNextPage
-                          }                          
-                        }                                  
-                      }
-                    }
+          core.info(`Issue with ID: ${githubIssueId} is closed but should have a ${projectField} of ${projectFieldValue}, the issue will be Re-opened`)
+          await github.graphql(`
+              mutation ($issueId: ID!) {
+                reopenIssue(input: {
+                  issueId: $issueId
+                }) {
+                  issue {
+                    id
                   }
-                  `,
-                  { issueId: issueId, after: after }
-                )
-                const commentFound = githubIssueNodeComments.node.comments.nodes.find(n => n.body.includes(searchCode))
-                core.debug(JSON.stringify(commentFound))
-                if (commentFound) {
-                  return commentFound
                 }
-                after = githubIssueNodeComments.node.comments.pageInfo.endCursor
-                hasNextPage = githubIssueNodeComments.node.comments.pageInfo.hasNextPage ?? false
               }
-              return undefined
-            }
+              `,
+              { issueId: githubIssue.id }
+            )
+          core.info(`Issue ID: ${githubIssue.id} was Re-Opened`)
 
-            const errorCode = 'INCORRECT_GITHUB_PROJECT_STATUS'
-            const commentMsg = `If an issue is attached to a project starting with ${projectPrefix}, it can only be closed if its has a ${projectField} of ${projectFieldValue} \n\n code: ${errorCode}`
-
-            //  Search for the presence of an existing comment containing the error code
-            // Only posting the comment if there were no previous similar comment in the issue.
-            const previousComment = await findPreviousComment(githubIssue.id, errorCode)
-
-            core.info(`Previous comment: ${JSON.stringify(previousComment)}`)
-            if (previousComment === undefined) {
-              await github.graphql(`
-                mutation ($issueId: ID! $body: String!) {
-                  addComment(input: {
-                    subjectId: $issueId
-                    body: $body
-                  }) {
-                    clientMutationId
+          // Code from: https://github.com/marocchino/sticky-pull-request-comment/blob/daa4a82a0a3f6c162c02b83fa44b3ab83946f7cb/src/comment.ts#L26
+          const findPreviousComment = async (issueId, searchCode) => {
+            let after = null
+            let hasNextPage = true
+            while (hasNextPage) {
+              core.info(`Paginating through comments in issue: ${issueId} after: ${after}`)
+              const githubIssueNodeComments = await github.graphql(`
+                query issue($issueId: ID! $after: String) {
+                  node(id: $issueId) {
+                    ... on Issue {
+                      id
+                      comments(first: 100 after: $after) {
+                        nodes {
+                          id
+                          author {
+                            login
+                          }
+                          isMinimized
+                          body
+                        }
+                        pageInfo {
+                          endCursor
+                          hasNextPage
+                        }                          
+                      }                                  
+                    }
                   }
                 }
                 `,
-                { issueId: githubIssue.id, body: commentMsg }
+                { issueId: issueId, after: after }
               )
-              core.info(`Added a comment with error code: ${errorCode} in issue with ID: ${githubIssue.id}`)
-            } else {
-              core.info(`Found a previous comment with error code: ${errorCode} in issue with ID: ${githubIssue.id}`)
+              const commentFound = githubIssueNodeComments.node.comments.nodes.find(n => n.body.includes(searchCode))
+              core.debug(JSON.stringify(commentFound))
+              if (commentFound) {
+                return commentFound
+              }
+              after = githubIssueNodeComments.node.comments.pageInfo.endCursor
+              hasNextPage = githubIssueNodeComments.node.comments.pageInfo.hasNextPage ?? false
             }
+            return undefined
           }
+
+          const errorCode = 'INCORRECT_GITHUB_PROJECT_STATUS'
+          const commentMsg = `If an issue is attached to a project starting with ${projectPrefix}, it can only be closed if its has a ${projectField} of ${projectFieldValue} \n\n code: ${errorCode}`
+
+          //  Search for the presence of an existing comment containing the error code
+          // Only posting the comment if there were no previous similar comment in the issue.
+          const previousComment = await findPreviousComment(githubIssue.id, errorCode)
+
+          core.info(`Previous comment: ${JSON.stringify(previousComment)}`)
+          if (previousComment === undefined) {
+            await github.graphql(`
+              mutation ($issueId: ID! $body: String!) {
+                addComment(input: {
+                  subjectId: $issueId
+                  body: $body
+                }) {
+                  clientMutationId
+                }
+              }
+              `,
+              { issueId: githubIssue.id, body: commentMsg }
+            )
+            core.info(`Added a comment with error code: ${errorCode} in issue with ID: ${githubIssue.id}`)
+          } else {
+            core.info(`Found a previous comment with error code: ${errorCode} in issue with ID: ${githubIssue.id}`)
+          }
+
