--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -141,6 +141,13 @@ jobs:
               body: `@${ context.payload.issue.user.login } your issues was moved back to jahia/jahia-private since it contained the jahia-only label!`
             });
 
+      # If labeled with delete, the issue is transffered to a dedicated repository
+      - name: Transfer Issue for deletion
+        uses: lando/transfer-issue-action@v2
+        with:
+          token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}        
+          router: delete:deleted-issues     
+
       # Transfer issues between repositories of the Jahia org
       - name: Transfer Issue & Create Stub
         uses: Fgerthoffert/actions-transfer-issue@v1.0.0
