--- a/.github/workflows/pr-chores.yml
+++ b/.github/workflows/pr-chores.yml
@@ -13,6 +13,8 @@ jobs:
   lint-pr-title:
     name: Lint PR Title
     runs-on: ubuntu-latest
+    # It does not make sense to run that workflow when a PR is closed
+    if: ${{ github.event.action != 'closed' }}
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         id: lint_pr_title
@@ -66,7 +68,7 @@ jobs:
   label-release:
     runs-on: ubuntu-latest
     name: Apply label base on conventional commit
-    if: ${{ github.event.action == 'closed' }}    
+    if: ${{ github.event.action == 'closed' }}
     steps:
       - uses: stephdotnet/conventional-commit-pr-labels@0.2.0
         with:
