--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -10,6 +10,13 @@ jobs:
     name: General Issue operations
     runs-on: ubuntu-latest
     steps:
+      - name: Displays details about the event
+        uses: actions/github-script@v7
+        if: steps.transfer-issue.outputs.new_issue_number != ''
+        with:
+          script: |
+            console.log(context.payload)
+
       - name: Re-open issue closed and not in the Done column
         uses: jahia/jahia-modules-action/delivery/keep-issue-open@v2
         with:
@@ -130,7 +137,7 @@ jobs:
           token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}        
           router: jahia-only:jahia-private      
       - name: Update Transferred Issue
-        uses: actions/github-script@v5
+        uses: actions/github-script@v7
         if: steps.transfer-issue.outputs.new_issue_number != ''
         with:
           script: |
