--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -10,11 +10,18 @@ jobs:
     name: General Issue operations
     runs-on: ubuntu-latest
     steps:
+      # Provides additional data if it becomes needed to debug a particular event
       - name: Displays details about the event
         uses: actions/github-script@v7
         with:
           script: |
-            console.log(context.payload)
+            core.info(`context.payload.action: ${context.payload.action}`)
+            core.info(`context.payload.issue.node_id: ${context.payload.issue.node_id}`)
+            core.info(`context.payload.issue.number: ${context.payload.issue.number}`)
+            core.info(`context.payload.issue.html_url: ${context.payload.issue.html_url}`)
+            core.info(`context.payload.sender.login: ${context.payload.sender.login}`)
+            core.debug(context.payload)
+            console.log(context)
 
       - name: Re-open issue closed and not in the Done column
         uses: jahia/jahia-modules-action/delivery/keep-issue-open@v2
