--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -23,7 +23,7 @@ jobs:
             core.info(`context.payload.sender.login: ${context.payload.sender.login}`)
             core.debug(context)
 
-      - name: Re-open issue closed and not in the Done column
+      - name: Re-open an issue if it is closed but not in the Done column
         uses: jahia/jahia-modules-action/delivery/keep-issue-open@v2
         with:
           github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
@@ -117,6 +117,14 @@ jobs:
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:Security
 
+      # The refresh label is useful to trigger this workflow
+      # It gets automatically removed
+      - name: Remove the refresh label
+        uses: mondeja/remove-labels-gh-action@v2
+        with:
+          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+          labels: refresh
+
   projects-milestone:
     name: Projects on Milestones
     if: ${{ github.event.action == 'milestoned' || github.event.action == 'demilestoned' }}
@@ -176,10 +184,19 @@ jobs:
     needs: transfer
     if: always()
     steps:
+      # If the issue was moved to a different repository it will not be possible to attach links
+      # In that case skip the link creation, which will be handled next time an event happens on the issue
+      - name: Check if the issue still exists in the repository
+        uses: jahia/jahia-modules-action/delivery/check-issue-exists@v2
+        id: issue-exists
+        with:
+          github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+
       # Create links in Jira to GitHub Issues
       # We still need to create a Jira User and update the server_host
       - name: Create links to GitHub in Jira issues
         uses: Fgerthoffert/actions-create-jira-link@v1.1.0
+        if: steps.transfer-issue.outputs.new_issue_number != ''
         with:
           token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           jira_server_host: jira.jahia.org
