--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -118,7 +118,7 @@ jobs:
       # The refresh label is useful to trigger this workflow
       # It gets automatically removed
       - name: Remove the refresh label
-        uses: mondeja/remove-labels-gh-action@v2
+        uses: jahia/jahia-modules-action/delivery/delete-labels@improve-wf2
         with:
           token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labels: refresh
