--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -35,11 +35,10 @@ jobs:
     steps:
       # Issue type is not available by default, this makes it available for if conditions
       - name: Get Issue type
-        uses: actions/github-script@v7
+        uses: jahia/jahia-modules-action/delivery/get-issue-type@2280-final-cleanup-on-the-issues-and-prs-chores-workflows
         id: get-issue-type
         with:
-          script: if (context.payload.issue.type !== undefined) {return context.payload.issue.type.name}
-          result-encoding: string
+          github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}      
 
       # Using an official action from GitHub to attach issues to projects
       # https://github.com/marketplace/actions/add-to-github-projects
